# ChangeLog for sys-apps/systemd
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.172 2013/09/14 08:47:56 pacho Exp $

*systemd-206-r5 (14 Sep 2013)

  14 Sep 2013; Pacho Ramos <pacho@gentoo.org>
  +files/206-0006-allow-tabs-in-configuration-files.patch,
  +files/206-0007-allow-tabs-in-configuration-files2.patch,
  +systemd-206-r5.ebuild:
  Allow tabs in environment files (#481554 by dolphinling)

  13 Sep 2013; Michał Górny <mgorny@gentoo.org> systemd-9999-r1.ebuild:
  Sync the live ebuild with latest changes.

*systemd-206-r4 (11 Sep 2013)

  11 Sep 2013; Michał Górny <mgorny@gentoo.org> +systemd-206-r4.ebuild:
  Introduce -r4 that uses separate sys-apps/gentoo-systemd-integration.
  Introduces local.d generator.

  06 Sep 2013; Pacho Ramos <pacho@gentoo.org> systemd-204.ebuild,
  systemd-206-r3.ebuild:
  Check for TMPFS_POSIX_ACL when needed (#482336#c24 by Alexander Tsoy)

  28 Aug 2013; Pacho Ramos <pacho@gentoo.org> systemd-204.ebuild,
  systemd-206-r3.ebuild:
  Update message about /etc/mtab link (#482786), show message about systemd-ui
  only when package is not installed (#480606)

  11 Aug 2013; Mike Gilbert <floppym@gentoo.org> systemd-206-r3.ebuild,
  systemd-9999-r1.ebuild:
  Call udevadm control --reload in pkg_postinst.

  10 Aug 2013; Michał Górny <mgorny@gentoo.org> systemd-9999-r1.ebuild:
  Enable building multilib libgudev.

  10 Aug 2013; Michał Górny <mgorny@gentoo.org> systemd-206-r3.ebuild,
  systemd-9999-r1.ebuild:
  Add missing prune_libtool_files call.

  09 Aug 2013; Michał Górny <mgorny@gentoo.org> -systemd-206-r1.ebuild,
  systemd-206-r3.ebuild, systemd-9999-r1.ebuild:
  Make polkit a PDEP to avoid circular dependency. Bug #480328.

  09 Aug 2013; Michał Górny <mgorny@gentoo.org> systemd-206-r3.ebuild,
  systemd-9999-r1.ebuild:
  Work-around 32-bit dbus check (it is not used by the libraries).

*systemd-206-r3 (09 Aug 2013)
